--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="style.css" />
-<title>Yu Su's Homepage - UC Santa Barbara</title>
+<title>Yu Su's Homepage - The Ohio State University</title>
 <script async>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -23,6 +23,7 @@
   	<div id="header">
     	<a href="#">Home</a>
         <a href="resources/CV_YuSu.pdf">CV</a>
+        <a href="#teaching">Teaching</a>
         <a href="#publications">Publications</a>
         <a href="#experience">Experience</a>
         <a href="#service">Service</a>
@@ -37,7 +38,7 @@
         <div class="divider"></div>
 
         <img src="images/avatar.jpg" alt="Yu Su" style="width:264px;height:246px;float:left;margin-right:10px;margin-bottom:10px;margin-top:5px;">
-        <p>I'm currently a senior researcher at <a href="http://www.semanticmachines.com/">Microsoft Semantic Machines</a> in Berkeley. I will join the <a href="https://cse.osu.edu/">Department of Computer Science and Engineering</a> at the Ohio State University in January 2020. I got my PhD from the <a href="http://cs.ucsb.edu">Department of Computer Science</a> at University of California, Santa Barbara, advised by <a href="http://www.cs.ucsb.edu/~xyan/">Xifeng Yan</a>. Before coming to UC Santa Babara, I received my bachelor degree from the <a href="http://www.cs.tsinghua.edu.cn/publish/csen/index.html">Department of Computer Science and Technology</a>, Tsinghua University in 2012. I have spent some fun time interning in IBM T.J. Watson Research Center (2015), Microsoft Research Redmond (2016 and 2017), and U.S. Army Research Laboratory (2015 and 2016).
+        <p>I'm currently an Assistant Professor of the <a href="https://cse.osu.edu/">Department of Computer Science and Engineering</a> at the Ohio State University. Before coming to OSU I spent a year as a senior researcher at <a href="http://www.semanticmachines.com/">Microsoft Semantic Machines</a> in Berkeley, CA. I got my PhD from University of California, Santa Barbara and my bachelor degree from Tsinghua University, both in Compuster Science. I have spent some fun time interning in IBM T.J. Watson Research Center (2015), Microsoft Research Redmond (2016 and 2017), and U.S. Army Research Laboratory (2015 and 2016).
         </p>
         <p>
         I have broad interests in understanding <b>human languages</b>, <b>formal knowledge</b>, and <b>their interplay</b>. Specifically, I have been working on natural language interfaces (an umbrella term for techniques like semantic parsing and dialog systems) for a wide range of backend data and services such as knowledge bases, web tables, and APIs. I'm also interested in knowledge base construction and general text mining. 
@@ -56,7 +57,8 @@
 
         <div class="news">
         <ul>
-	    <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
+            <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
+            <li>01/2020: Started as Assistant Professor of Computer Science and Engineering at the Ohio State University</li>
 	    <li>08/2019: Long paper on model-based interactive semantic parsing got accepted to EMNLP 2019</li>
 	    <li>08/2019: Long paper on taxonomic categorization of documents got accepted to ICDM 2019</li>
 	    <li>05/2019: Short paper on general-purpose textual relation embedding got accepted to ACL 2019</li>
@@ -100,6 +102,15 @@
             <li>06/2016: Started summer internship in Microsoft Research, Redmond</li>
         </ul>
         </div>
+    </div>
+
+    <div class="contentBlock">
+        <a name="teaching"></a>
+        <h2>Teaching</h2>
+        <div class="divider"></div>
+        <ul>
+            <li>CSE5243</li>
+        </ul>
     </div>
 
 
@@ -268,8 +279,9 @@ probabilistic model and optimization algorithm for crowdsourcing.</span>
         <h2>Experience</h2>
         <div class="divider"></div>
         <ul>
-	    <li>10/2018 - present: Senior Researcher at <i>Microsoft Semantic Machines</i></li>
-	    <li>08/2018 - present: Visiting assistant professor at <i>The Ohio State University</i></li>
+            <li>01/2020 - present: Assistant professor at <i>The Ohio State University</i></li>
+	    <li>10/2018 - 12/2019: Senior researcher at <i>Microsoft Semantic Machines</i></li>
+	    <li>08/2018 - 07/2019: Visiting assistant professor at <i>The Ohio State University</i></li>
 	    <li>06/2017 - 09/2017: Research intern at <i>Microsoft Research, Redmond</i></li>
             <li>06/2016 - 09/2016: Research intern at <i>Microsoft Research, Redmond</i></li>
             <li>05/2015 - 06/2015, 09/2015 - 11/2015, 05/2016 - 06/2016: Visiting researcher at <i>U.S. Army Research Laboratory</i></li>
@@ -284,8 +296,8 @@ probabilistic model and optimization algorithm for crowdsourcing.</span>
         <h2>Service</h2>
         <div class="divider"></div>
         <ul>
-	    <li><b>Co-organizer</b>: <a href="http://www.kbcom.org">KBCOM'18</a></li>
-	    <li><b>Program Committee Member</b>: KDD'19, NAACL'19, AAAI'19, KDD'18, ACL'18, EMNLP'18, WWW'18, NLPCC'18, CoNLL'18, ACL'17, EMNLP'17, NLPCC'17, CIKM'17</li>
+	    <li><b>Organizer</b>: KBCOM'18 (co-located with WSDM'18), NLI'20 (co-located with ACL'20)</li>
+	    <li><b>Program Committee Member</b>: ACL'20, KDD'19, NAACL'19, AAAI'19, KDD'18, ACL'18, EMNLP'18, WWW'18, NLPCC'18, CoNLL'18, ACL'17, EMNLP'17, NLPCC'17, CIKM'17</li>
             <li><b>Reviewer</b>: IEEE TNNLS, IEEE TKDE, ACM TKDD </li>
             <!--<li><b>External Reviewer</b>: KDD'17, WWW'17, EMNLP’16, CIKM’16, ICDM’16, VLDB’15, VLDB’14, ICDM’13, KAIS, TKDD, DMKD</li>-->
         </ul>
@@ -320,14 +332,12 @@ probabilistic model and optimization algorithm for crowdsourcing.</span>
         <h2>Awards</h2>
         <div class="divider"></div>
         <ul>
-          <li>Outstanding Dissertation Award of Computer Science, UCSB, 2019</li> 
+            <li>Outstanding Dissertation Award of Computer Science, UCSB, 2019</li> 
 	    <li>Best Distinguished Graduate Student Lecture of CS Summit, UCSB, 2018</li>
             <li>NSF-funded SDM Travel Award, 2016</li>
-            <li>LINK Lab Fellowship, 2012 (UCSB)</li>
-            <li>Outstanding Graduate, 2012 (Tsinghua University, <i>top 10%</i>)</li>
-	    <li>Yicong Huang Scholarship, 2010 (Tsinghua University)</li>
-	    <li>National Endeavor Fellowship, 2009 and 2011 (Tsinghua University, <i>top 10%</i>)</li>
-            <li>Outstanding Freshman Fellowship, 2008 (Tsinghua University, <i>top 10</i> in National College Entrance Examination)</li>
+            <li>LINK Lab Fellowship, UCSB, 2012</li>
+            <li>Outstanding Graduate, Tsinghua University, 2012</li>
+	    <li>Merit-based Fellowships, Tsinghua University, 2008-2011</li>
         </ul>
     </div>
     
