--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -109,7 +108,7 @@
         <h2>Teaching</h2>
         <div class="divider"></div>
         <ul>
-            <li>CSE5243</li>
+            <li><a href="courses/au19/cse5243/">AU2019: CSE5243 - Introduction to Data Mining (Undergrad & Graduate)</a></li>
         </ul>
     </div>
 
