--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <h2>Teaching</h2>
         <div class="divider"></div>
         <ul>
-            <li><a href="courses/au19/cse5243/">AU2019: CSE5243 - Introduction to Data Mining (Undergrad & Graduate)</a></li>
+            <li>AU2019: <a href="courses/au19/cse5243/"></a>CSE5243 - Introduction to Data Mining</a> (Undergrad & Graduate)</li>
         </ul>
     </div>
 
