--- a/courses/sp20/cse5243/index.html
+++ b/courses/sp20/cse5243/index.html
@@ -39,8 +39,8 @@
 <h3 property="dc:title" datatype="" style="color: #990000"><strong>Textbooks</strong></h3>
 No required textbook. Recommended books for reading: 
 <ul>
-<li>(Main) <a href="http://hanj.cs.illinois.edu/bk3/">Data Mining: Concepts and Techniques</a>, 3rd edition, Morgan Kaufmann, Jiawei Han, Micheline Kamber, and Jian Pei.</li>
-<li>(Main) <a href="http://www-users.cs.umn.edu/~kumar/dmbook/index.php">Introduction to Data Mining</a>, Pang-Ning Tan, Michael Steinbach, and Vipin Kumar</strong></li>
+<li>(Primary) <a href="http://hanj.cs.illinois.edu/bk3/">Data Mining: Concepts and Techniques</a>, 3rd edition, Morgan Kaufmann, Jiawei Han, Micheline Kamber, and Jian Pei.</li>
+<li>(Primary) <a href="http://www-users.cs.umn.edu/~kumar/dmbook/index.php">Introduction to Data Mining</a>, Pang-Ning Tan, Michael Steinbach, and Vipin Kumar</strong></li>
 <li>(Supplementary) <a href="http://www.dataminingbook.info/pmwiki.php/Main/BookDownload">Data Mining Analysis and Concepts</a> (Online version available), Mohammed J. Zaki and Wagner Meira, Jr.</strong></li>
 <li>(Supplementary) <a href="http://www.mmds.org/">Mining of Massive Datasets</a> (Online version available), Jure Leskovec, Anand Rajaraman and Jeffrey Ullman</strong></li>
 <li>(Supplementary) <a href="http://www.cs.cmu.edu/~tom/mlbook.html">Machine Learning</a>, Tom Mitchell</strong></li>
