--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <h2>Teaching</h2>
         <div class="divider"></div>
         <ul>
-            <li>AU2019: <a href="courses/sp20/cse5243/">CSE5243 - Introduction to Data Mining</a> (Undergrad & Graduate)</li>
+            <li>SP2020: <a href="courses/sp20/cse5243/">CSE5243 - Introduction to Data Mining</a> (Undergrad & Graduate)</li>
         </ul>
     </div>
 
