--- a/courses/sp20/cse5243/index.html
+++ b/courses/sp20/cse5243/index.html
@@ -181,7 +181,7 @@ table, th, td {
   <tr>
     <td>7</td>
     <td>02/19</td>
-    <td>Homework Discussion + Lecture Review + Midterm Review</td>
+    <td>Clustering: Basic Concepts/Methods</td>
     <td></td>
     <td></td>
     <td></td>
@@ -189,7 +189,7 @@ table, th, td {
   <tr>
     <td>7</td>
     <td>02/21</td>
-    <td>Midterm Exam</td>
+    <td>Homework Discussion + Midterm Review</td>
     <td></td>
     <td></td>
     <td></td>
@@ -197,7 +197,7 @@ table, th, td {
   <tr>
     <td>8</td>
     <td>02/26</td>
-    <td>Mining Frequent Patterns and Associations: Basic Concepts</td>
+    <td>Midterm Exam</td>
     <td></td>
     <td></td>
     <td></td>
