--- a/courses/sp20/cse5243/index.html
+++ b/courses/sp20/cse5243/index.html
@@ -85,15 +85,15 @@ table, th, td {
     <td><a href="./01Intro.pdf">Class Outline</a></td> 
     <td></td>
     <td></td>
-    <td></td>
+    <td><a href="Han_Chapter01.pdf">Chapter 1 (Han et al.)</a></td>
   </tr>
   <tr>
     <td>1</td>
     <td>01/10</td>
-    <td><a href="./01Intro-osu-2019.pdf">Introduction</a></td> 
+    <td><a href="./01Intro.pdf">Introduction</a></td> 
     <td></td>
     <td></td>
-    <td></td>
+    <td><a href="Han_Chapter01.pdf">Chapter 1 (Han et al.)</a></td>
   </tr>
   <tr>
     <td>2</td>
@@ -325,15 +325,7 @@ table, th, td {
   <tr>
     <td>16</td>
     <td>04/22</td>
-    <td>Final Week</td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>16</td>
-    <td>04/24</td>
-    <td>Final Week</td>
+    <td>Final Exam (10:00am-11:45am)</td>
     <td></td>
     <td></td>
     <td></td>
