--- a/courses/sp20/cse5243/index.html
+++ b/courses/sp20/cse5243/index.html
@@ -98,11 +98,10 @@ table, th, td {
   <tr>
     <td>2</td>
     <td>01/15</td>
-    <!-- <td> Review of Basic <a href="./prob-statisticalconcepts-review.pdf">Probability and Statistical Concepts</a></td>  -->
-    <td>Review of Basic Probability and Statistical Concepts</td> 
+    <td><a href="./probability_review.pdf"></a>Review of Basic Probability and Statistical Concepts</td> 
     <td></td>
     <td></td>
-    <!-- <td><a href="./cs229-prob-stanford-notes.pdf">Review of Probability Theory</a> </td> -->
+    <td><a href="./cs229-prob-stanford-notes.pdf">Review of Probability Theory</a> </td>
     <td></td>
   </tr>
   <tr>
