--- a/courses/sp20/cse5243/index.html
+++ b/courses/sp20/cse5243/index.html
@@ -98,7 +98,7 @@ table, th, td {
   <tr>
     <td>2</td>
     <td>01/15</td>
-    <td><a href="./probability_review.pdf">Review of Basic Probability Concepts</a></td> 
+    <td>Review of Basic <a href="./probability_review.pdf">Probability</a> and <a href="./statistics_review.pdf">Statistics</a> Concepts</td> 
     <td></td>
     <td></td>
     <td><a href="./cs229-prob-stanford-notes.pdf">Review of Probability Theory</a> </td>
