--- a/courses/sp20/cse5243/index.html
+++ b/courses/sp20/cse5243/index.html
@@ -107,7 +107,7 @@ table, th, td {
   <tr>
     <td>2</td>
     <td>01/17</td>
-    <td<a href="./Preprocessing-0117.pdf">Data & Data Preprocessing<<a></td> 
+    <td><a href="./Preprocessing-0117.pdf">Data & Data Preprocessing<a></td> 
     <td></td>
     <td></td>
     <td><a href="Han_Chapter03.pdf">Chapter 3 (Han et al.)</a></td>
