--- a/courses/sp20/cse5243/index.html
+++ b/courses/sp20/cse5243/index.html
@@ -108,9 +108,9 @@ table, th, td {
     <td>2</td>
     <td>01/17</td>
     <td><a href="./Preprocessing-0117.pdf">Data & Data Preprocessing<a></td> 
+    <td><font color="red">Assignment 1</font></td>
     <td></td>
-    <td></td>
-    <td><a href="Han_Chapter03.pdf">Chapter 3 (Han et al.)</a></td>
+    <td><a href="Han_Chapter03.pdf">Chapter 3 (Han et al.)</a>, <a href="./jupyter-tutorial.zip">Jupyter Notebook Tutorial</a></td>
   </tr>
   <tr>
     <td>3</td>
@@ -133,7 +133,7 @@ table, th, td {
     <td>01/29</td>
     <td>Classification: Basic Concepts/Methods</td>
     <td></td>
-    <td></td>
+    <td><font color="red">Assignment 1</font></td>
     <td></td>
   </tr>
   <tr>
