--- a/index.html
+++ b/index.html
@@ -301,10 +301,9 @@ probabilistic model and optimization algorithm for crowdsourcing.</span>
         <h2>Service</h2>
         <div class="divider"></div>
         <ul>
-	    <li><b>Organizer</b>: KBCOM'18 (co-located with WSDM'18), NLI'20 (co-located with ACL'20)</li>
-	    <li><b>Program Committee Member</b>: ACL'20, KDD'19, NAACL'19, AAAI'19, KDD'18, ACL'18, EMNLP'18, WWW'18, NLPCC'18, CoNLL'18, ACL'17, EMNLP'17, NLPCC'17, CIKM'17</li>
-            <li><b>Reviewer</b>: IEEE TNNLS, IEEE TKDE, ACM TKDD </li>
-            <!--<li><b>External Reviewer</b>: KDD'17, WWW'17, EMNLP’16, CIKM’16, ICDM’16, VLDB’15, VLDB’14, ICDM’13, KAIS, TKDD, DMKD</li>-->
+	    <li><b>Organizer/Co-chair</b>: KBCOM'18 (co-located with WSDM'18), <a href="https://nli-acl2020.github.io/">NLI'20</a> (co-located with ACL'20)</li>
+	    <li><b>Program Committee Member</b>: KDD'20, ACL'20, AKBC'20, KDD'19, NAACL'19, AAAI'19, KDD'18, ACL'18, EMNLP'18, WWW'18, NLPCC'18, CoNLL'18, ACL'17, EMNLP'17, NLPCC'17, CIKM'17</li>
+        <li><b>Reviewer</b>: IEEE TNNLS, IEEE TKDE </li>
         </ul>
     </div>
 
@@ -339,11 +338,11 @@ probabilistic model and optimization algorithm for crowdsourcing.</span>
         <ul>
             <li>Best of IEEE ICDM Selection, 2019</li> 
             <li>Outstanding Dissertation Award of Computer Science, UCSB, 2019</li> 
-	    <li>Best Distinguished Graduate Student Lecture of CS Summit, UCSB, 2018</li>
+	        <li>Best Distinguished Graduate Student Lecture of CS Summit, UCSB, 2018</li>
             <li>NSF-funded SDM Travel Award, 2016</li>
             <li>LINK Lab Fellowship, UCSB, 2012</li>
             <li>Outstanding Graduate, Tsinghua University, 2012</li>
-	    <li>Merit-based Fellowships, Tsinghua University, 2008-2011</li>
+	        <li>Merit-based Scholarships, Tsinghua University, 2008-2011</li>
         </ul>
     </div>
     
@@ -355,11 +354,6 @@ probabilistic model and optimization algorithm for crowdsourcing.</span>
         <div class="divider"></div>
         <ul>
         	<li>Email: %s@osu.edu % 'su.809' </li>
-        	<!--
-		<li>Mail Address:
-        		6920 Whittier Dr, Apt 130,
-        		Goleta, CA, 93117 </li>
-		-->
         </ul>
     </div>
 
