--- a/courses/sp20/cse5243/index.html
+++ b/courses/sp20/cse5243/index.html
@@ -115,7 +115,7 @@ table, th, td {
   <tr>
     <td>3</td>
     <td>01/22</td>
-    <td>Data Preprocessing and Classification: Basic Concepts/Methods</td>
+    <td><a href="./Preprocessing-0117.pdf">Data Preprocessing</a> and <a href="./Classification-BasicConcepts-0122.pdf">Classification: Basic Concepts/Methods</a></td>
     <td></td>
     <td></td>
     <td></td>
