--- a/courses/sp20/cse5243/index.html
+++ b/courses/sp20/cse5243/index.html
@@ -118,7 +118,7 @@ table, th, td {
     <td><a href="./Preprocessing-0117.pdf">Data Preprocessing</a> and <a href="./Classification-BasicConcepts-0122.pdf">Classification: Basic Concepts/Methods</a></td>
     <td></td>
     <td></td>
-    <td></td>
+    <td><a href="Han_Chapter08.pdf">Chapter 8 (Han et al.)</a></td>
   </tr>
   <tr>
     <td>3</td>
