--- a/courses/sp20/cse5243/index.html
+++ b/courses/sp20/cse5243/index.html
@@ -123,7 +123,7 @@ table, th, td {
   <tr>
     <td>3</td>
     <td>01/24</td>
-    <td>Classification: Basic Concepts/Methods</td>
+    <td><a href="./Classification-BasicConcepts-0122.pdf">Classification: Basic Concepts/Methods</a></td>
     <td></td>
     <td></td>
     <td></td>
@@ -131,7 +131,7 @@ table, th, td {
   <tr>
     <td>4</td>
     <td>01/29</td>
-    <td>Classification: Basic Concepts/Methods</td>
+    <td><a href="./Classification-BasicConcepts-0129.pdf">Classification: Basic Concepts/Methods</a></td>
     <td></td>
     <td><font color="red">Assignment 1</font></td>
     <td></td>
