--- a/courses/sp20/cse5243/index.html
+++ b/courses/sp20/cse5243/index.html
@@ -140,9 +140,9 @@ table, th, td {
     <td>4</td>
     <td>01/31</td>
     <td>Classification: Basic Concepts/Methods</td>
+    <td><font color="red">Assignment 2</font></td>
     <td></td>
-    <td></td>
-    <td></td>
+    <td><a href="./20_newsgroups.tar.gz">20 Newsgroup Dataset</a></td>
   </tr>
   <tr>
     <td>5</td>
@@ -181,7 +181,7 @@ table, th, td {
     <td>02/19</td>
     <td>Clustering: Basic Concepts/Methods</td>
     <td></td>
-    <td></td>
+    <td><font color="red">Assignment 2</font></td>
     <td></td>
   </tr>
   <tr>
