--- a/courses/sp20/cse5243/index.html
+++ b/courses/sp20/cse5243/index.html
@@ -139,7 +139,7 @@ table, th, td {
   <tr>
     <td>4</td>
     <td>01/31</td>
-    <td>Classification: Basic Concepts/Methods</td>
+    <td><a href="./Classification-Advanced-0131.pdf">Classification: Basic Concepts/Methods</a></td>
     <td><font color="red">Assignment 2</font></td>
     <td></td>
     <td><a href="./20_newsgroups.tar.gz">20 Newsgroup Dataset</a></td>
