--- a/courses/sp20/cse5243/index.html
+++ b/courses/sp20/cse5243/index.html
@@ -142,7 +142,7 @@ table, th, td {
     <td><a href="./Classification-Advanced-0131.pdf">Classification: Basic Concepts/Methods</a></td>
     <td><font color="red">Assignment 2</font></td>
     <td></td>
-    <td><a href="./20_newsgroups.tar.gz">20 Newsgroup Dataset</a></td>
+    <td><a href="./20news-train.zip">20 Newsgroup Dataset - Training</a></td>
   </tr>
   <tr>
     <td>5</td>
