--- a/courses/sp20/cse5243/index.html
+++ b/courses/sp20/cse5243/index.html
@@ -147,7 +147,7 @@ table, th, td {
   <tr>
     <td>5</td>
     <td>02/05</td>
-    <td>Classification: Advanced Methods</td>
+    <td><a href="./Classification-Advanced-0205.pdf">Classification: Advanced Methods</a</td>
     <td></td>
     <td></td>
     <td></td>
