--- a/courses/sp20/cse5243/index.html
+++ b/courses/sp20/cse5243/index.html
@@ -150,7 +150,7 @@ table, th, td {
     <td><a href="./Classification-Advanced-0205.pdf">Classification: Advanced Methods</a</td>
     <td></td>
     <td></td>
-    <td></td>
+    <td><a href="Han_Chapter09.pdf">Chapter 9 (Han et al.)</a></td>
   </tr>
   <tr>
     <td>5</td>
