--- a/courses/sp20/cse5243/index.html
+++ b/courses/sp20/cse5243/index.html
@@ -155,10 +155,10 @@ table, th, td {
   <tr>
     <td>5</td>
     <td>02/07</td>
-    <td>Clustering: Basic Concepts/Methods</td>
+    <td><a href="./Clustering-BasicConcepts-0207.pdf">Clustering: Basic Concepts/Methods</a></td>
     <td></td>
     <td></td>
-    <td></td>
+    <td><a href="Han_Chapter10.pdf">Chapter 10 (Han et al.)</a></td>
   </tr>
   <tr>
     <td>6</td>
