--- a/courses/sp20/cse5243/index.html
+++ b/courses/sp20/cse5243/index.html
@@ -171,7 +171,7 @@ table, th, td {
   <tr>
     <td>6</td>
     <td>02/14</td>
-    <td>Clustering: Basic Concepts/Methods</td>
+    <td><a href="./Clustering-BasicConcepts-0214.pdf">Clustering: Basic Concepts/Methods</a></td>
     <td></td>
     <td></td>
     <td></td>
