--- a/courses/sp20/cse5243/index.html
+++ b/courses/sp20/cse5243/index.html
@@ -179,7 +179,7 @@ table, th, td {
   <tr>
     <td>7</td>
     <td>02/19</td>
-    <td>Clustering: Basic Concepts/Methods</td>
+    <td><a href="./Clustering-BasicConcepts-0219.pdf">Clustering: Basic Concepts/Methods</a></td>
     <td></td>
     <td><font color="red">Assignment 2</font></td>
     <td></td>
