--- a/courses/sp20/cse5243/index.html
+++ b/courses/sp20/cse5243/index.html
@@ -187,7 +187,7 @@ table, th, td {
   <tr>
     <td>7</td>
     <td>02/21</td>
-    <td>Homework Discussion + Midterm Review</td>
+    <td><a href="./homework-review-midterm.pdf">Homework Discussion</a> + <a href="./review-session-midterm.pdf">Midterm Review</a></td>
     <td></td>
     <td></td>
     <td></td>
