--- a/courses/sp20/cse5243/index.html
+++ b/courses/sp20/cse5243/index.html
@@ -194,6 +194,14 @@ table, th, td {
   </tr>
   <tr>
     <td>8</td>
+    <td>02/24</td>
+    <td></td>
+    <td><font color="red">Assignment 3</font></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>8</td>
     <td>02/26</td>
     <td>Midterm Exam</td>
     <td></td>
@@ -245,7 +253,7 @@ table, th, td {
     <td>03/18</td>
     <td>Mining Frequent Patterns and Associations: Advanced Methods</td>
     <td></td>
-    <td></td>
+    <td><font color="red">Assignment 3</font></td>
     <td></td>
   </tr>
   <tr>
