--- a/courses/sp20/cse5243/index.html
+++ b/courses/sp20/cse5243/index.html
@@ -211,15 +211,15 @@ table, th, td {
   <tr>
     <td>8</td>
     <td>02/28</td>
-    <td>Mining Frequent Patterns and Associations: Basic Concepts</td>
+    <td><a href="./FPM-BasicConcepts.pdf">Mining Frequent Patterns and Associations: Basic Concepts</a></td>
     <td></td>
     <td></td>
-    <td></td>
+    <td><a href="Han_Chapter6.pdf">Chapter 6 (Han et al.)</a></td>
   </tr>
   <tr>
     <td>9</td>
     <td>03/04</td>
-    <td>Mining Frequent Patterns and Associations: Basic Concepts</td>
+    <td><a href="./FPM-BasicConcepts.pdf">Mining Frequent Patterns and Associations: Basic Concepts</a></td>
     <td></td>
     <td></td>
     <td></td>
