--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <div class="news">
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
+            <li>03/2020: Thank you, Fujitrsu Laboratories of America, for supporting our research!</li>
             <li>01/2020: Started as Assistant Professor of Computer Science and Engineering at the Ohio State University</li>
 	    <li>08/2019: Long paper on model-based interactive semantic parsing got accepted to EMNLP 2019</li>
 	    <li>08/2019: Long paper on taxonomic categorization of documents got accepted to ICDM 2019</li>
