--- a/courses/sp20/cse5243/index.html
+++ b/courses/sp20/cse5243/index.html
@@ -251,15 +251,15 @@ table, th, td {
   <tr>
     <td>11</td>
     <td>03/18</td>
-    <td>Mining Frequent Patterns and Associations: Advanced Methods</td>
+    <td>Sprint Break</td>
     <td></td>
-    <td><font color="red">Assignment 3</font></td>
+    <td></td>
     <td></td>
   </tr>
   <tr>
     <td>11</td>
     <td>03/20</td>
-    <td>Mining Frequent Patterns and Associations: Advanced Methods</td>
+    <td>Spring Break</td>
     <td></td>
     <td></td>
     <td></td>
@@ -267,15 +267,15 @@ table, th, td {
   <tr>
     <td>12</td>
     <td>03/25</td>
-    <td>Mining Frequent Patterns and Associations: Advanced Methods</td>
+    <td>Mining Frequent Patterns and Associations: Basic Methods</td>
     <td></td>
-    <td></td>
+    <td><font color="red">Assignment 3</font></td>
     <td></td>
   </tr>
   <tr>
     <td>12</td>
     <td>03/27</td>
-    <td>Finding Similar Items: Locality-Sensitive Hashing</td>
+    <td>Mining Frequent Patterns and Associations: Advanced Methods</td>
     <td></td>
     <td></td>
     <td></td>
@@ -283,7 +283,7 @@ table, th, td {
   <tr>
     <td>13</td>
     <td>04/01</td>
-    <td>Finding Similar Items: Locality-Sensitive Hashing</td>
+    <td>Mining Frequent Patterns and Associations: Advanced Methods</td>
     <td></td>
     <td></td>
     <td></td>
@@ -291,7 +291,7 @@ table, th, td {
   <tr>
     <td>13</td>
     <td>04/03</td>
-    <td>Introduction to Graphs</td>
+    <td>Finding Similar Items: Locality-Sensitive Hashing</td>
     <td></td>
     <td></td>
     <td></td>
@@ -299,7 +299,7 @@ table, th, td {
   <tr>
     <td>14</td>
     <td>04/08</td>
-    <td>Introduction to Graphs</td>
+    <td>Finding Similar Items: Locality-Sensitive Hashing</td>
     <td></td>
     <td></td>
     <td></td>
@@ -307,7 +307,7 @@ table, th, td {
   <tr>
     <td>14</td>
     <td>04/10</td>
-    <td>Introduction to Information Retrieval</td>
+    <td>Introduction to Graphs</td>
     <td></td>
     <td></td>
     <td></td>
@@ -315,7 +315,7 @@ table, th, td {
   <tr>
     <td>15</td>
     <td>04/15</td>
-    <td>Introduction to Text Mining</td>
+    <td>Introduction to Graphs</td>
     <td></td>
     <td></td>
     <td></td>
@@ -323,7 +323,7 @@ table, th, td {
   <tr>
     <td>15</td>
     <td>04/17</td>
-    <td>Review Session</td>
+    <td>Introduction to Information Retrieval</td>
     <td></td>
     <td></td>
     <td></td>
@@ -331,11 +331,28 @@ table, th, td {
   <tr>
     <td>16</td>
     <td>04/22</td>
+    <td>Introduction to Text Mining</td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>16</td>
+    <td>04/24</td>
+    <td>Review Session</td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>17</td>
+    <td>04/27</td>
     <td>Final Exam (10:00am-11:45am)</td>
     <td></td>
     <td></td>
     <td></td>
   </tr>
+  
 </table>
 </body>
 </div>
