--- a/courses/sp20/cse5243/index.html
+++ b/courses/sp20/cse5243/index.html
@@ -227,7 +227,7 @@ table, th, td {
   <tr>
     <td>9</td>
     <td>03/06</td>
-    <td>Mining Frequent Patterns and Associations: Basic Concepts</td>
+    <td><a href="./FPM-BasicConcepts.pdf">Mining Frequent Patterns and Associations: Basic Concepts</a></td>
     <td></td>
     <td></td>
     <td></td>
@@ -267,7 +267,7 @@ table, th, td {
   <tr>
     <td>12</td>
     <td>03/25</td>
-    <td>Mining Frequent Patterns and Associations: Basic Methods</td>
+    <td><a href="./FPM-BasicConcepts.pdf">Mining Frequent Patterns and Associations: Basic Methods</a></td>
     <td></td>
     <td><font color="red">Assignment 3</font></td>
     <td></td>
