--- a/courses/sp20/cse5243/index.html
+++ b/courses/sp20/cse5243/index.html
@@ -275,10 +275,10 @@ table, th, td {
   <tr>
     <td>12</td>
     <td>03/27</td>
-    <td>Mining Frequent Patterns and Associations: Advanced Methods</td>
+    <td><a href="./FPM-Advanced.pdf">Mining Frequent Patterns and Associations: Advanced Methods</a></td>
     <td></td>
     <td></td>
-    <td></td>
+    <td><a href="Han_Chapter7.pdf">Chapter 7 (Han et al.)</a></td>
   </tr>
   <tr>
     <td>13</td>
