--- a/courses/sp20/cse5243/index.html
+++ b/courses/sp20/cse5243/index.html
@@ -283,7 +283,7 @@ table, th, td {
   <tr>
     <td>13</td>
     <td>04/01</td>
-    <td>Mining Frequent Patterns and Associations: Advanced Methods</td>
+    <td><a href="./FPM-Advanced.pdf">Mining Frequent Patterns and Associations: Advanced Methods</a></td>
     <td></td>
     <td></td>
     <td></td>
