--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <div class="news">
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
+            <li>04:2020: Long paper on logical natural language generation accepted to ACL 2020</li>
             <li>03/2020: Thank you, Fujitsu Laboratories of America, for supporting our research!</li>
             <li>01/2020: Started as Assistant Professor of Computer Science and Engineering at the Ohio State University</li>
 	    <li>08/2019: Long paper on model-based interactive semantic parsing got accepted to EMNLP 2019</li>
@@ -120,10 +121,14 @@
         <div class="divider"></div>
 
         <div class="publication">
-	<!--<div style="margin-bottom: 10px;font-size: 18px">(<a href="https://scholar.google.com/citations?user=rIh5OqoAAAAJ&hl=en">Google Scholar</a>)</div>-->	
+	      <div style="margin-bottom: 10px;font-size: 18px">(<a href="https://scholar.google.com/citations?user=rIh5OqoAAAAJ&hl=en">Google Scholar</a>)</div>	
             <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p>
             <ul>
-		<li>
+              <li>
+                <span class="paperTitle">Logical Natural Language Generation from Open-Domain Tables</span> <br />
+                <span class="paperAuthor">Wenhu Chen, Jianshu Chen, Yu Su, Zhiyu Chen and William Yang Wang. To appear in the Annual Conference of the Association for Computational Linguistics, 2020 (<b>ACL’20</b>)</span>
+                </li>
+              <li>
 		<span class="paperTitle">Model-based Interactive Semantic Parsing: A Unified Formulation and A Text-to-SQL Case Study</span> <br />
 		<span class="paperAuthor">Ziyu Yao, Yu Su, Huan Sun, Scott Wen-tau Yih. In Proc. of the Conference on Empirical Methods in Natural Language Processing, 2019 (<b>EMNLP’19</b>)</span>
 		<span class="paperResource"> [<a href="https://arxiv.org/abs/1910.05389">paper</a>][<a href="https://github.com/sunlab-osu/MISP">code</a>]</span>
