--- a/courses/sp20/cse5243/index.html
+++ b/courses/sp20/cse5243/index.html
@@ -307,7 +307,7 @@ table, th, td {
   <tr>
     <td>14</td>
     <td>04/10</td>
-    <td>Word Embedding</td>
+    <td><a href="./Word-Embedding1.pdf">Word Embedding</a></td>
     <td></td>
     <td></td>
     <td></td>
@@ -315,7 +315,7 @@ table, th, td {
   <tr>
     <td>15</td>
     <td>04/15</td>
-    <td>Finding Similar Items: Locality-Sensitive Hashing</td>
+    <td><a href="./Word-Embedding2.pdf">Advanced Word Embedding</a></td>
     <td></td>
     <td></td>
     <td></td>
