--- a/courses/sp20/cse5243/index.html
+++ b/courses/sp20/cse5243/index.html
@@ -323,15 +323,15 @@ table, th, td {
   <tr>
     <td>15</td>
     <td>04/17</td>
-    <td>Introduction to Information Retrieval</td>
+    <td><a href="./LSH.pdf">Locality-Sensitive Hashing</a></td>
     <td></td>
     <td></td>
-    <td></td>
+    <td><a href="http://infolab.stanford.edu/~ullman/mmds/ch3n.pdf">Chapter 4 (Lekovec et al.)</a></td>
   </tr>
   <tr>
     <td>16</td>
     <td>04/22</td>
-    <td>Introduction to Text Mining</td>
+    <td>Locality-Sensitive Hashing</td>
     <td></td>
     <td></td>
     <td></td>
