--- a/courses/sp20/cse5243/index.html
+++ b/courses/sp20/cse5243/index.html
@@ -331,7 +331,7 @@ table, th, td {
   <tr>
     <td>16</td>
     <td>04/22</td>
-    <td>Locality-Sensitive Hashing</td>
+    <td><a href="./LSH.pdf">Locality-Sensitive Hashing</a></td>
     <td></td>
     <td></td>
     <td></td>
