--- a/index.html
+++ b/index.html
@@ -125,8 +125,15 @@
             <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p>
             <ul>
               <li>
+                <span class="paperTitle">An Imitation Game for Learning Semantic Parsers from User Interaction</span> <br />
+                <span class="paperAuthor">Ziyu Yao, Yiqi Tang, Wen-tau Yih, Huan Sun, Yu Su. <i>arXiv preprint arXiv:2005.00689</i></span>
+		<span class="paperResource"> [<a href="https://arxiv.org/abs/2005.00689">paper</a>]</span>
+                </li>
+              <li>
+              <li>
                 <span class="paperTitle">Logical Natural Language Generation from Open-Domain Tables</span> <br />
                 <span class="paperAuthor">Wenhu Chen, Jianshu Chen, Yu Su, Zhiyu Chen and William Yang Wang. To appear in the Annual Conference of the Association for Computational Linguistics, 2020 (<b>ACL’20</b>)</span>
+		<span class="paperResource"> [<a href="https://arxiv.org/abs/2004.10404">paper</a>][<a href="https://github.com/wenhuchen/LogicNLG">code and data</a>]</span>
                 </li>
               <li>
 		<span class="paperTitle">Model-based Interactive Semantic Parsing: A Unified Formulation and A Text-to-SQL Case Study</span> <br />
@@ -307,7 +314,7 @@ probabilistic model and optimization algorithm for crowdsourcing.</span>
         <h2>Service</h2>
         <div class="divider"></div>
         <ul>
-	    <li><b>Organizer/Co-chair</b>: KBCOM'18 (co-located with WSDM'18), <a href="https://nli-acl2020.github.io/">NLI'20</a> (co-located with ACL'20)</li>
+	    <li><b>Organizer/Co-chair</b>: KBCOM'18 (co-located with WSDM'18), <a href="https://nli-acl2020.github.io/">NLI'20</a> (co-located with ACL'20), NLPCC'20 Area Chair (Conversational Bot/QA Track)</li>
 	    <li><b>Program Committee Member</b>: KDD'20, ACL'20, AKBC'20, KDD'19, NAACL'19, AAAI'19, AKBC'19, KDD'18, ACL'18, EMNLP'18, WWW'18, NLPCC'18, CoNLL'18, ACL'17, EMNLP'17, NLPCC'17, CIKM'17</li>
         <li><b>Reviewer</b>: IEEE TNNLS, IEEE TKDE </li>
         </ul>
