--- a/courses/au20/cse5539/index.html
+++ b/courses/au20/cse5539/index.html
@@ -78,7 +78,7 @@ table, th, td {
   <tr>
     <td>1</td>
     <td>08/26</td>
-    <td>Class Outline</a></td> 
+    <td>Class outline</a></td> 
     <td></td>
     <td></td>
     <td></td>
