--- a/courses/au20/cse5539/index.html
+++ b/courses/au20/cse5539/index.html
@@ -123,7 +123,7 @@ table, th, td {
   <tr>
     <td>6</td>
     <td>09/30</td>
-    <td>Language interfaces: dialogue systems and semantic parsing</td>
+    <td>Project proposal</td>
     <td></td>
     <td></td>
     <td></td>
